--- a/src/app/pages/pre-auth/admin/admin.component.html
+++ b/src/app/pages/pre-auth/admin/admin.component.html
@@ -45,7 +45,7 @@
         </li>
 
         <li>
-          <a style="cursor: pointer;" id="activado">
+          <a (click)="video()" style="cursor: pointer;" id="activado">
             <span class="las la-clipboard-list"></span>
             <span>Videos</span></a>
         </li>
