--- a/src/app/pages/main/navbar/navbar.component.html
+++ b/src/app/pages/main/navbar/navbar.component.html
@@ -6,13 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg" id="headBuy" >
+    <nav class="navbar navbar-expand-lg" id="headBuy">
         <div class="container-fluid">
             <a class="navbar-brand font-weight-bold d-block d-lg-none" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -42,11 +39,8 @@
             </div>
         </div>
     </nav>
-    <div class="cabeceraBuy">
-        <div id="tr" style="display:none">
-            <!-- Holadddddddddddddddddddddddddddddddddddddddddddd que tal! Yo soy el elemento oculto  -->
-            <app-table-buy></app-table-buy>
-        </div>
+    <div id="tr" style="display:none" class="ejemplo">
+        <app-table-buy></app-table-buy>
     </div>
 
     <script src="/src/carousel.js"></script>
