--- a/src/app/pages/main/table-buy/table-buy.component.html
+++ b/src/app/pages/main/table-buy/table-buy.component.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <script src="table-buy.component.css"></script>
 </head>
+
 <body>
-    <div class="cabeceraBuy">
         <div class="ejemplo">
-            Hola que tal! Yo soy elfffffffffffffffffffffffffffffffffffffffffffff elemento oculto 
+            <h5 class="noHayDatos" *ngIf="InformationBuy == null">
+                No hay datos para mostrar
+            </h5>
+            <table *ngIf="InformationBuy != null">
+                <thead>
+                    <tr>
+                        <td>Nombre</td>
+                        <td>Precio</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="
+                          let buy of InformationBuy
+                            | paginate: { itemsPerPage: 5, currentPage: page }
+                        ">
+                        <td>{{ buy.nombre }}</td>
+                        <td>{{ buy.precio }}</td>
+                        <i class="fas fa-edit" routerLink="/admin/editar-User/{{ buy.id }}"></i>
+                        <i (click)="DeleteUser(buy.id)" class="fas fa-trash-alt fa-lg text-danger"></i>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div>
+                <button>Confirmar</button>
+            </div>
         </div>
-    </div>
 </body>
+
 </html>
